createTweetElement that take in tweet data and return html markup template

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,7 +25,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-main.container {
+main.tweets-container {
   width: 90%;
   margin: auto;
   padding: 1em 0;
