--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,11 +2,6 @@ section.new-tweet{
   padding: 1.5em;
 }
 
-section.new-tweet:hover{
-  box-shadow: -1px 1px 5px 6px rgba(0,0,0,0.07);
-  border-radius: 0.25em;
-}
-
 h2{
   margin: 0 0 0.5em 0;
 }
@@ -19,6 +14,7 @@ textarea {
   margin-bottom: 0.5em;
   resize: none;
   height: 2em;
+  outline:0px;
 }
 
 ::placeholder {
@@ -32,6 +28,7 @@ input {
   color: #ffffff;
   padding: 0.25em;
   border-radius: 0.25em;
+  outline:0px;
 }
 
 .counter {
