--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,5 @@
-header {
-  height: 400px;
+header#topHeader {
+  padding: 80px 0 30px 0;
   width: 100%;
   background-color: #faa700;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
@@ -20,4 +20,23 @@ header {
 
 #userName {
   text-align: center;
+}
+
+/* Tablet Styles */
+@media (min-width: 768px) {
+  header#topHeader {
+    width: 300px;
+    height: 260px;
+    /* margin: 17% 2% 2% 5%; */
+    margin: 135px 35px;
+    padding: 0;
+  }
+
+  #avatar {
+    height: 150px;
+  }
+
+  #avatar img {
+    height: 90%;
+  }
 }
