--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,8 +25,11 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-main.tweets-container {
-  width: 90%;
-  margin: auto;
-  padding: 1em 0;
-}
+
+/* Tablet Styles */
+@media (min-width: 768px) {
+  .flex-container {
+    display: flex;
+    clear: both;
+  }
+ }
