--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,17 +1,12 @@
 nav {
   font-family: 'Bungee', cursive;
-  position: sticky;
+  position: fixed;
   top: 0;
-  height: 120px;
+  height: 100px;
   width: 100%;
   z-index: 1;
-  background-color: #faa700;
   color: #ffffff;
   padding: 1.5em;
-}
-
-nav.scrolled {
-  max-block-size: 80%;
 }
 
 button.tweet-button {
@@ -23,9 +18,6 @@ button.tweet-button {
   font-size: 20px;
   float: right;
   border: none;
-  /* border-bottom: 1px solid #4056A1;
-  padding-bottom: 1em;
-  text-decoration: none; */
 }
 
 button.tweet-button:active {
@@ -38,7 +30,7 @@ button.tweet-button:active {
   color: #F7590A;
 }
 
-.arrowBounce .material-icons:hover {
+button.tweet-button:hover .arrowBounce .material-icons {
   animation: bounce .5s infinite;
 }
 @keyframes bounce {
@@ -51,28 +43,15 @@ button.tweet-button:active {
 }
 
 button.tweet-button:hover {
-  color: #4056A1;
   cursor: pointer;
-  /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-repeat: repeat-x;
-  background-size: auto 6px;
-  border-bottom: 0;
-  text-decoration: none; */
 }
 
-/* button.tweet-button::after {
-  content: '';
-  display: block;
-  border-bottom: solid 3px #4056A1;  
-  transform: scaleX(0);  
-  transition: transform 250ms ease-in-out;
-  padding: 5px;
+/* Tablet Styles */
+@media (min-width: 768px) {
+  nav {
+    background-color: #4056A1;
+  }
 }
-
-button.tweet-button:hover::after {
-  transform: scaleX(1);
-} */
 
 
 
