--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,7 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
 /*
