--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -57,7 +57,11 @@ input {
   color: #ffffff;
   padding: 0.25em;
   border-radius: 0.25em;
-  outline: 0;
+}
+
+input:hover {
+  letter-spacing: 2px;
+  box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
 }
 
 .counter {
