--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,9 +13,9 @@ button.tweet-button {
   background: none;
   transform: translate(0%, -20%);
   color: #ffffff;
-  padding: 1em;
+  padding: 0.5em;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   float: right;
   border: none;
 }
@@ -25,13 +25,13 @@ button.tweet-button:active {
 }
 
 .arrowBounce .material-icons {
-  padding: .5em;
+  padding: 0.2em;
   transform: rotate(90deg);
-  color: #F7590A;
+  color: #f7590a;
 }
 
 button.tweet-button:hover .arrowBounce .material-icons {
-  animation: bounce .5s infinite;
+  animation: bounce 0.25s ease infinite alternate;
 }
 @keyframes bounce {
   from {
@@ -49,9 +49,6 @@ button.tweet-button:hover {
 /* Tablet Styles */
 @media (min-width: 768px) {
   nav {
-    background-color: #4056A1;
+    background-color: #4056a1;
   }
 }
-
-
-
